Fix phone_number in controller and views too.

--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -16,8 +16,8 @@
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :phome_number %><br>
-    <%= f.text_field :phome_number %>
+    <%= f.label :phone_number %><br>
+    <%= f.text_field :phone_number %>
   </div>
   <div class="field">
     <%= f.label :join_timestamp %><br>
