--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -6,7 +6,7 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th>Phome number</th>
+      <th>Phone number</th>
       <th>Join timestamp</th>
       <th>Last action timestamp</th>
       <th>Private link to facebook</th>
@@ -20,7 +20,7 @@
     <% @profiles.each do |profile| %>
       <tr>
         <td><%= profile.name %></td>
-        <td><%= profile.phome_number %></td>
+        <td><%= profile.phone_number %></td>
         <td><%= profile.join_timestamp %></td>
         <td><%= profile.last_action_timestamp %></td>
         <td><%= profile.private_link_to_facebook %></td>
