--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -6,8 +6,8 @@
 </p>
 
 <p>
-  <strong>Phome number:</strong>
-  <%= @profile.phome_number %>
+  <strong>Phone number:</strong>
+  <%= @profile.phone_number %>
 </p>
 
 <p>
