--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,14 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<header>
+    <%= render partial: "top_bar", locals: {} %>
+</header>
 
 <%= yield %>
 
+<footer>
+
+</footer>
 </body>
 </html>
