- Added partials for footer - Tweaked constants and scaffold css - Added some images

--- a/app/assets/stylesheets/constants.scss
+++ b/app/assets/stylesheets/constants.scss
@@ -1,5 +1,5 @@
+$main-font: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Geneva, Verdana, sans-serif;
 
-$plendit-blue: blue;
 $standard-spacing: 12px;
 
 $color-background: #edefed;
@@ -9,4 +9,3 @@ $color-box-border: #9b9b9b;
 $color-approve: #36b984;
 $color-edit: #8f8989;
 $color-reject: #c20400;
-
