Render partial layouts, passing local variables

--- a/app/views/application/_top_bar.html.erb
+++ b/app/views/application/_top_bar.html.erb
@@ -11,7 +11,7 @@
         </form>
     </span>
 
-    <% if @show_search_field %>
+    <% if show_search_field %>
         Conditional search field
     <% else %>
         No search field
