--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header>
-    <%= render partial: "top_bar", locals: {} %> <%= @show_search_field %>
+    <%= render partial: "top_bar", locals: { show_search_field: @show_search_field } %> <%# = @show_search_field %>
 </header>
 
 <%= yield %>
