--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -12,6 +12,8 @@
       <th>Private link to facebook</th>
       <th>Private link to linkedin</th>
       <th>Ephemeral answer percent</th>
+      <th>Profile status</th>
+
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -26,6 +28,7 @@
         <td><%= profile.private_link_to_facebook %></td>
         <td><%= profile.private_link_to_linkedin %></td>
         <td><%= profile.ephemeral_answer_percent %></td>
+        <td><%= profile.profile_status.status %></td>
         <td><%= link_to 'Show', profile %></td>
         <td><%= link_to 'Edit', edit_profile_path(profile) %></td>
         <td><%= link_to 'Destroy', profile, method: :delete, data: { confirm: 'Are you sure?' } %></td>
