Added large-spacing constant

--- a/app/assets/stylesheets/_constants.scss
+++ b/app/assets/stylesheets/_constants.scss
@@ -1,6 +1,7 @@
 $main-font: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Geneva, Verdana, sans-serif;
 
 $standard-spacing: 12px;
+$large-spacing: $standard-spacing * 3;
 
 $color-background: #edefed;
 $color-plendit-blue: #2a96ff;
