Added block for top title part of ad page

--- a/app/views/misc/ad.html.erb
+++ b/app/views/misc/ad.html.erb
@@ -1,2 +1,9 @@
 
 Ad price: <%= @ad.price %>
+
+
+<%= render partial: "ad_title_box", locals: { ad: @ad } %>
+
+
+<%= link_to 'Edit', edit_ad_path(@ad) %> |
+<%= link_to 'Back', ads_path %>
