Added placeholder for gallery

--- a/app/views/misc/ad.html.erb
+++ b/app/views/misc/ad.html.erb
@@ -4,6 +4,8 @@ Ad price: <%= @ad.price %>
 
 <%= render partial: "ad_title_box", locals: { ad: @ad } %>
 
+<%= render partial: "ad_gallery_box", locals: { ad: @ad } %>
+
 
 <%= link_to 'Edit', edit_ad_path(@ad) %> |
 <%= link_to 'Back', ads_path %>
