Fixed variable name

--- a/app/views/misc/_ad_title_box.html.erb
+++ b/app/views/misc/_ad_title_box.html.erb
@@ -8,7 +8,7 @@
 
     <div class="ad-title-box__info-holder">
         <div class="ad-title-box__rating-holder">
-            <%= render('shared/stars.html', num: ad.profile.calculate_average_rating ) %>
+            <%= render('shared/stars.html', rating: ad.profile.calculate_average_rating ) %>
             (count)
         </div>
         <div class="ad-title-box__feedback-holder">
