--- a/app/views/misc/_ad_feedback_list_section.html.erb
+++ b/app/views/misc/_ad_feedback_list_section.html.erb
@@ -1,9 +1,6 @@
 <section class="ad-feedback-section" id="feedback">
     <h2>Tilbakemeldinger</h2>
-    <ol>
-        <li>feedback item</li>
-        <li>feedback item</li>
-        <li>feedback item</li>
-        <li>feedback item</li>
-    </ol>
+
+    <%= render partial: "feedback_item_box", collection: ad.received_feedbacks, as: 'feedback' %>
+
 </section>
