--- a/app/views/feedbacks/_form.html.erb
+++ b/app/views/feedbacks/_form.html.erb
@@ -13,11 +13,13 @@
 
   <div class="field">
     <%= f.label :ad_id %><br>
-    <%= f.number_field :ad_id %>
+    <%#= f.number_field :ad_id %>
+    <%= f.collection_select(:ad_id, Ad.all, :id, :title) %>
   </div>
   <div class="field">
     <%= f.label :from_profile_id %><br>
-    <%= f.number_field :from_profile_id %>
+    <%#= f.number_field :from_profile_id %>
+    <%= f.collection_select(:from_profile_id, Profile.all, :id, :name) %>
   </div>
   <div class="field">
     <%= f.label :score %><br>
