--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -13,7 +13,9 @@
 
   <div class="field">
     <%= f.label :profile_id %><br>
-    <%= f.number_field :profile_id %>
+    <%#= f.number_field :profile_id %>
+    <%# NOTE: Non-scalable, test only: %>
+    <%= f.collection_select(:profile_id, Profile.all, :id, :name) %>
   </div>
   <div class="field">
     <%= f.label :title %><br>
