Add email, password to Profiles

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -11,6 +11,11 @@
 </p>
 
 <p>
+  <strong>Email number:</strong>
+  <%= @profile.email %>
+</p>
+
+<p>
   <strong>Join timestamp:</strong>
   <%= @profile.join_timestamp %>
 </p>
