--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -16,8 +16,20 @@
     <%= f.text_field :name %>
   </div>
   <div class="field">
+    <%= f.label :email %><br>
+    <%= f.text_field :email %>
+  </div>
+  <div class="field">
     <%= f.label :phone_number %><br>
     <%= f.text_field :phone_number %>
+  </div>
+  <div class="field">
+    <%= f.label :password, 'Password' %><br>
+    <%= f.password_field :password, size: 40 %>
+  </div>
+  <div class="field">
+    <%= f.label :password_confirmation, 'Confirm' %><br>
+    <%= f.password_field :password_confirmation, size: 40  %>
   </div>
   <div class="field">
     <%= f.label :join_timestamp %><br>
