Updated some field names to match new model

--- a/app/views/misc/_feedback_item_box.html.erb
+++ b/app/views/misc/_feedback_item_box.html.erb
@@ -1,11 +1,11 @@
 <div class="feedback-item-box">
     <div class="feedback-item-box__avatar-box">
         <%= image_tag "placeholder_avatar.png", alt: "username", class: "avatar--large" %>
-        <p><%= feedback.from_profile.name %></p>
+        <p><%= feedback.profile.name %></p>
     </div>
     <div class="feedback-item-box__body">
         <p class="feedback-item-box__summary">
-            <%= render('shared/stars.html', rating: feedback.from_profile.calculate_average_rating ) %>
+            <%= render('shared/stars.html', rating: feedback.profile.calculate_average_rating ) %>
             <%= feedback.updated_at.to_formatted_s(:plendit_short_date)  %>
             på <%= link_to feedback.ad.title, ad_path(feedback.ad) %> 
        </p>
