--- a/app/views/shared/_stars.html.erb
+++ b/app/views/shared/_stars.html.erb
@@ -2,6 +2,8 @@
 <%
     if rating > 5 or rating < 0
       puts "out of bounds"
+      rating = 5 if rating > 5
+      rating = 0 if rating < 0
     end
 
     remainder_star = rating - rating.floor
