--- a/app/assets/stylesheets/_ad_feedback_list_section.scss
+++ b/app/assets/stylesheets/_ad_feedback_list_section.scss
@@ -1,6 +1,6 @@
 @import 'constants.scss';
 
 .ad-feedback-section {
-    padding-top: $large-spacing;
+    margin-top: $large-spacing;
     border: solid thin black    
 }
