--- a/app/assets/stylesheets/_ad_gallery_box.scss
+++ b/app/assets/stylesheets/_ad_gallery_box.scss
@@ -1,3 +1,7 @@
+@import 'constants.scss';
+
 .gallery-box {
     border: solid thin black;
+    margin-top: $standard-spacing;
+    padding-top: 100px;
 }
