--- a/app/assets/stylesheets/_feedback_item_box.scss
+++ b/app/assets/stylesheets/_feedback_item_box.scss
@@ -2,6 +2,7 @@
 
 .feedback-item-box {
     min-height: 128px;
+    margin-bottom: $standard-spacing;
 
     &__avatar-box {
         display: inline-block;
@@ -14,7 +15,7 @@
     }
 
     &__body {
-        max-width: 680px;
+        max-width: 540px;
         vertical-align: top;
         display: inline-block;
     }
