--- a/app/views/misc/_feedback_item_box.html.erb
+++ b/app/views/misc/_feedback_item_box.html.erb
@@ -1,6 +1,6 @@
 <div class="feedback-item-box">
     <div class="feedback-item-box__avatar-box">
-        <%= image_tag "placeholder_avatar.png", alt: "username", class: "avatar--large" %>
+        <%= image_tag "placeholder_avatar.png", alt: "username", class: "avatar--medium" %>
         <p><%= feedback.profile.name %></p>
     </div>
     <div class="feedback-item-box__body">
