--- a/app/views/misc/ad.html.erb
+++ b/app/views/misc/ad.html.erb
@@ -1,12 +1,11 @@
-
-Ad price: <%= @ad.price %>
-
-
-<%= render partial: "ad_title_box", locals: { ad: @ad } %>
-
-<%= render partial: "ad_gallery_box", locals: { ad: @ad } %>
-
-<%= render partial: "ad_feedback_list_section", locals: { ad: @ad } %>
-
-<%= link_to 'Edit', edit_ad_path(@ad) %> |
-<%= link_to 'Back', ads_path %>
+<div class="two-col-wide-layout">
+    <div class="two-col-wide-layout__left">
+        <%= render partial: "ad_title_box", locals: { ad: @ad } %>
+        <%= render partial: "ad_gallery_box", locals: { ad: @ad } %>
+        <%= render partial: "ad_feedback_list_section", locals: { ad: @ad } %>
+    </div>
+    <div class="two-col-wide-layout__right">
+        <%= link_to 'Edit', edit_ad_path(@ad) %> |
+        <%= link_to 'Back', ads_path %>
+    </div>
+</div>
