Added section with ad copy

--- a/app/views/misc/ad.html.erb
+++ b/app/views/misc/ad.html.erb
@@ -2,6 +2,7 @@
     <div class="two-col-wide-layout__left">
         <%= render partial: "ad_title_box", locals: { ad: @ad } %>
         <%= render partial: "ad_gallery_box", locals: { ad: @ad } %>
+        <%= render partial: "ad_copy_section", locals: { ad: @ad } %>
         <%= render partial: "ad_feedback_list_section", locals: { ad: @ad } %>
     </div>
     <div class="two-col-wide-layout__right">
