--- a/app/views/misc/_ad_input_copy.html.erb
+++ b/app/views/misc/_ad_input_copy.html.erb
@@ -1,42 +1,42 @@
 <section class="ad-input-copy">
 
-    <h3 class="ad-input-copy__title">Gratis å legge ut</h3>
+    <h4>Gratis å legge ut</h4>
 
-    <p class="ad-input-copy__para">
+    <p>
         Det er helt gratis å legge ut en annonse hos oss. Vi tar oss bare
         betalt når du tjener penger, og aldri mer enn 10% av den totale leiesummen. 
     </p>
 
-    <h3 class="ad-input-copy__title">Verifisering</h3>
+    <h4>Verifisering</h4>
 
-    <p class="ad-input-copy__para">
+    <p>
         Alle våre brukere er verifisert med mobilnummer og
         gjennom Schibsteds innloggingstjeneste Spid.
     </p>
 
-    <h3 class="ad-input-copy__title">Betaling</h3>
-    <p class="ad-input-copy__para">
+    <h4>Betaling</h4>
+    <p>
         Betalingen skjer trygt gjennom PayEx, og og det skjer
         aldri en transaksjon før utleier og leietaker er fornøyd.
     </p>
 
 
-    <h3 class="ad-input-copy__title">Trygghet</h3>
+    <h4>Trygghet</h4>
 
     <!-- fixme: clear fix -->
-    <p class="ad-input-copy__para">
+    <p>
         <%= image_tag "safety_check.png", alt: "", class: "ad-input-copy__badge", size: "41x69" %>
         Alle ting du leier ut, er forsikret opp til kr 50.000,-
         Les mer om din trygghet utleier <a href="#">her</a>.
     </p>
 
 
-    <h3 class="ad-input-copy__title">Spørsmål?</h3>
-    <p class="ad-input-copy__para">
+    <h4>Spørsmål?</h4>
+    <p>
         Om du har noen spørsmål til tjenesten, ikke nøl med å ta kontakt
          med oss på kundesenter@plendit.no
     </p>
-    <p class="ad-input-copy__para">
+    <p>
         Du kan også lese <a href="#">ofte stilte spørsmål.</a>
     </p>
 
