--- a/app/assets/stylesheets/_avatars.scss
+++ b/app/assets/stylesheets/_avatars.scss
@@ -9,7 +9,7 @@ $avatar-tiny-size: 24px;
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    border: solid 3px silver;
+    border: solid 3px white;
 }
 
 .avatar--large {
