--- a/app/views/application/_main_footer.html.erb
+++ b/app/views/application/_main_footer.html.erb
@@ -1,26 +1,30 @@
 <footer class="about-footer">
-        <div class="about-footer__column">
-            <h4>Generelt</h4>
-            <ol class="about-footer__list">
-                <li>link 1</li>
-                <li>link 1</li>
-                <li>link 1</li>
-                <li>link 1</li>
-            </ol>
-        </div>
-        <div class="about-footer__column">
-            <h4>Kundeservice</h4>
-            <ol class="about-footer__list">
-                <li>Ofte stilte spørsmål</li>
-                <li>Kontaktinformasjon</li>
-                <li>Om oss</li>
-            </ol>
-        </div>
-        <div class="about-footer__column">
-            <h4>Besøk oss på facebook</h4>
-            <ol class="about-footer__list">
-                <li><%= image_tag "facebook_footer_like.png", alt: "", size: "49x20" %></li>
-            </ol>
+    <div class="container">
+        <div class="row">
+            <div class="four columns">
+                <h6>Generelt</h6>
+                <ul class="about-footer__list">
+                    <li>link 1</li>
+                    <li>link 1</li>
+                    <li>link 1</li>
+                    <li>link 1</li>
+                </ul>
+
+            </div>
+            <div class="four columns">
+                <h6>Kundeservice</h6>
+                <ul class="about-footer__list">
+                    <li>Ofte stilte spørsmål</li>
+                    <li>Kontaktinformasjon</li>
+                    <li>Om oss</li>
+                </ul>
+            </div>
+            <div class="four columns">
+                <h6>Besøk oss på facebook</h6>
+                <ul class="about-footer__list">
+                    <li><%= image_tag "facebook_footer_like.png", alt: "", size: "49x20" %></li>
+                </ul>
+            </div>
         </div>
     </div>
 </footer>
