--- a/app/views/misc/create_1.html.erb
+++ b/app/views/misc/create_1.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="eight columns">
-            input left
+            input step 1
         </div>
         <div class="four columns">
             <%= render partial: "ad_input_copy" %>
