--- a/app/views/misc/create_3.html.erb
+++ b/app/views/misc/create_3.html.erb
@@ -1,8 +1,11 @@
-<div class="two-col-wide-layout">
-    <div class="two-col-wide-layout__left">
-        Input step 3
-    </div>
-    <div class="two-col-wide-layout__right">
-        <%= render partial: "ad_input_copy" %>
+<div class="container">
+    <div class="row">
+        <div class="eight columns">
+            input step 3
+        </div>
+        <div class="four columns">
+            <%= render partial: "ad_input_copy" %>
+        </div>
     </div>
 </div>
+
