Added missing color var

--- a/app/assets/stylesheets/_constants.scss
+++ b/app/assets/stylesheets/_constants.scss
@@ -7,6 +7,8 @@ $color-background: #edefed;
 $color-plendit-blue: #2a96ff;
 $color-box-border: #9b9b9b;
 
+$color-gray-background: #d4d4d4; // rgb(212,212,212);
+
 $color-approve: #36b984;
 $color-edit: #8f8989;
 $color-reject: #c20400;
