--- a/app/views/misc/create_2.html.erb
+++ b/app/views/misc/create_2.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
     <div class="row">
-        <div class="eight columns">
+        <div class="seven columns">
             input step 2
         </div>
-        <div class="four columns">
+        <div class="four columns offset-by-one column">
             <%= render partial: "ad_input_copy" %>
         </div>
     </div>
