--- a/app/assets/stylesheets/skeleton.css
+++ b/app/assets/stylesheets/skeleton.css
@@ -370,6 +370,14 @@ form {
 .u-pull-left {
   float: left; }
 
+@media (min-width: 550px) {
+  .u-hidden-when-grid {
+    display: none;
+  }  
+}
+
+
+
 
 /* Misc
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
